--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!--
 BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 	- BLOCO 1: PUXAR TELEFONE, HORARIO DE ATENDIMENTO E EMAIL;
-	- BLOCO 2: 
+	- BLOCO 2: PUXAR FOTOS PRINCIPAIS DE CADA PROPRIEDADE, PUXAR A QUANTIDADE DE PROPRIEDADES A SER MOSTRADA, AS IMAGENS DEVEM TER O TAMANHO 800x500;
+	- BLOCO 3:
+	- BLOCO 4:
+	- BLOCO 5:
+	- BLOCO 6:
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -21,6 +25,11 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 
     <!-- Custom CSS -->
     <link href="css/shop-homepage.css" rel="stylesheet">
+
+	<link href="css/bootstrap-formhelpers.min.css" rel="stylesheet">
+    <link href="css/bootstrap-select.min.css" rel="stylesheet">
+	
+    <link href="css/forms.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -63,7 +72,6 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 			<!-- Navigation -->
 			<nav class="navbar navbar-center-menu" role="navigation">
 				<div class="container">
-					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="col-md-1"></div>
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -72,9 +80,7 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<!-- <a class="navbar-brand" href="#">Start Bootstrap</a> -->
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li>
@@ -95,35 +101,34 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 						</ul>
 					</div>
 					<div class="col-md-1"></div>
-					<!-- /.navbar-collapse -->
 				</div>
-				<!-- /.container -->
 			</nav>
+			<!-- /.Navigation -->
 
             <div class="col-md-1"></div>
-
             <div class="col-md-10">
 
-                <div class="row carousel-holder">
-
-                    <div class="col-md-12">
+                <div class="row carousel-holder carousel-holder-property">
+                    <div class="col-md-8">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
+                            <!-- BLOCO 2 -->
+							<ol class="carousel-indicators">
                                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    <img class="slide-image" src="http://placehold.it/800x500" alt="">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    <img class="slide-image" src="http://placehold.it/800x500" alt="">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image" src="http://placehold.it/800x300" alt="">
+                                    <img class="slide-image" src="http://placehold.it/800x500" alt="">
                                 </div>
                             </div>
+							<!-- FIM BLOCO 2 -->
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                                 <span class="glyphicon glyphicon-chevron-left"></span>
                             </a>
@@ -132,7 +137,36 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
                             </a>
                         </div>
                     </div>
-
+					
+					<div class="col-md-4">
+						<div class="filter-property">
+							<div class="bfh-selectbox" data-name="selectbox2" data-value="12">
+								<div data-value="1">Option 1</div>
+								<div data-value="2">Option 2</div>
+								<div data-value="3">Option 3</div>
+							</div>
+							<div class="bfh-selectbox" data-name="selectbox2" data-value="12">
+								<div data-value="1">Option 1</div>
+								<div data-value="2">Option 2</div>
+								<div data-value="3">Option 3</div>
+							</div>
+							<div class="bfh-selectbox" data-name="selectbox2" data-value="12">
+								<div data-value="1">Option 1</div>
+								<div data-value="2">Option 2</div>
+								<div data-value="3">Option 3</div>
+							</div>
+							<div class="bfh-selectbox" data-name="selectbox2" data-value="12">
+								<div data-value="1">Option 1</div>
+								<div data-value="2">Option 2</div>
+								<div data-value="3">Option 3</div>
+							</div>
+							<div class="bfh-selectbox" data-name="selectbox2" data-value="12">
+								<div data-value="1">Option 1</div>
+								<div data-value="2">Option 2</div>
+								<div data-value="3">Option 3</div>
+							</div>
+						</div>
+					</div>
                 </div>
 
                 <div class="row">
@@ -286,6 +320,12 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+	
+	<script src="js/bootstrap-formhelpers.min.js"></script>
+
+    <script src="js/bootstrap-select.min.js"></script>
+	
+    <script src="js/forms.js"></script>
 
 </body>
 
