Pagina de imovel.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 	- BLOCO 2: PUXAR FOTOS PRINCIPAIS DE CADA PROPRIEDADE, PUXAR A QUANTIDADE DE PROPRIEDADES A SER MOSTRADA, AS IMAGENS DEVEM TER O TAMANHO 800x500;
 	- BLOCO 3: PUXAR OS FILTROS DO BANCO. FAZER O CADASTRO DESSES FILTROS NO ADMIN;
 	- BLOCO 4: PUXAR DADOS DAS PROPRIEDADES DO BANCO (12 PROPRIEDADES);
-	- BLOCO 5:
+	- BLOCO 5: PUXAS DADOS DE CONTATO DO BANCO;
 	- BLOCO 6:
 -->
 <!DOCTYPE html>
@@ -473,7 +473,10 @@ BLOCOS QUE PRECISAM DE EDIÇÃO PELO USUÁRIO PUXANDO DADOS DO ADMIN:
 					<div class="row">
 						<div class="col-md-1"></div>
 						<div class="col-md-5">
-							<p class="copy text-center">Copyright &copy; 2016 <br> Portal Imóveis Itajubá - Sua imobiliária em Itajubá</p>
+							<div class="face"></div>
+							<div class="whats"></div>
+							<br class="clear" />
+							<p class="copy">Copyright &copy; 2016 <br> Portal Imóveis Itajubá - Sua imobiliária em Itajubá</p>
 						</div>
 						<div class="col-md-5">
 							<!-- BLOCO 5 -->
